--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,19 @@
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Popular Movies</string>
 
     <string name="action_sort_popular">Popular</string>
     <string name="action_sort_top_rated">Top Rated</string>
 
-    <string name="snackbar_download_failed_msg">Error loading movies.</string>
+    <string name="snackbar_download_failed_msg">Error Fetching Data</string>
     <string name="retry">RETRY</string>
     <string name="title_activity_details">DetailsActivity</string>
     <string name="action_settings">Settings</string>
 
     <string name="overview">Overview</string>
+    <string name="action_display_fav">Favourite Movies</string>
+    <string name="action_set_fav">Favourite</string>
+
+    <string name="format_rating"><xliff:g id="rating">%1.2f</xliff:g> ★</string>
+    <string name="format_release_date">Release Date: <xliff:g id="date">%s</xliff:g></string>
+    <string name="action_share">Share</string>
 </resources>
